; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_common/extr_mesh_buf.c_net_buf_simple_add_u8.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_common/extr_mesh_buf.c_net_buf_simple_add_u8.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_buf_simple = type { i32 }

@.str = private unnamed_addr constant [18 x i8] c"buf %p val 0x%02x\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @net_buf_simple_add_u8(%struct.net_buf_simple* %0, i32 %1) #0 {
  %3 = alloca %struct.net_buf_simple*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store %struct.net_buf_simple* %0, %struct.net_buf_simple** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.net_buf_simple*, %struct.net_buf_simple** %3, align 8
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @NET_BUF_SIMPLE_DBG(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), %struct.net_buf_simple* %6, i32 %7)
  %9 = load %struct.net_buf_simple*, %struct.net_buf_simple** %3, align 8
  %10 = call i32* @net_buf_simple_add(%struct.net_buf_simple* %9, i32 1)
  store i32* %10, i32** %5, align 8
  %11 = load i32, i32* %4, align 4
  %12 = load i32*, i32** %5, align 8
  store i32 %11, i32* %12, align 4
  %13 = load i32*, i32** %5, align 8
  ret i32* %13
}

declare dso_local i32 @NET_BUF_SIMPLE_DBG(i8*, %struct.net_buf_simple*, i32) #1

declare dso_local i32* @net_buf_simple_add(%struct.net_buf_simple*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
